--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,101 @@
         "ios": "c",
         "mktappengine.h": "c",
         "any": "c",
-        "filesystem": "c"
+        "filesystem": "c",
+        "chrono": "c",
+        "optional": "c",
+        "regex": "c",
+        "system_error": "c",
+        "algorithm": "c",
+        "array": "c",
+        "atomic": "c",
+        "bit": "c",
+        "bitset": "c",
+        "cctype": "c",
+        "charconv": "c",
+        "cinttypes": "c",
+        "clocale": "c",
+        "cmath": "c",
+        "codecvt": "c",
+        "compare": "c",
+        "complex": "c",
+        "concepts": "c",
+        "condition_variable": "c",
+        "csetjmp": "c",
+        "csignal": "c",
+        "cstdarg": "c",
+        "cstddef": "c",
+        "cstdint": "c",
+        "cstdio": "c",
+        "cstdlib": "c",
+        "cstring": "c",
+        "ctime": "c",
+        "cwchar": "c",
+        "cwctype": "c",
+        "deque": "c",
+        "exception": "c",
+        "format": "c",
+        "forward_list": "c",
+        "fstream": "c",
+        "functional": "c",
+        "future": "c",
+        "initializer_list": "c",
+        "iomanip": "c",
+        "iosfwd": "c",
+        "iostream": "c",
+        "istream": "c",
+        "iterator": "c",
+        "limits": "c",
+        "list": "c",
+        "locale": "c",
+        "map": "c",
+        "memory": "c",
+        "mutex": "c",
+        "new": "c",
+        "numbers": "c",
+        "numeric": "c",
+        "ostream": "c",
+        "queue": "c",
+        "random": "c",
+        "ratio": "c",
+        "semaphore": "c",
+        "set": "c",
+        "shared_mutex": "c",
+        "source_location": "c",
+        "span": "c",
+        "sstream": "c",
+        "stack": "c",
+        "stdexcept": "c",
+        "stop_token": "c",
+        "streambuf": "c",
+        "string": "c",
+        "thread": "c",
+        "tuple": "c",
+        "type_traits": "c",
+        "typeindex": "c",
+        "typeinfo": "c",
+        "unordered_map": "c",
+        "unordered_set": "c",
+        "utility": "c",
+        "valarray": "c",
+        "variant": "c",
+        "vector": "c",
+        "xfacet": "c",
+        "xhash": "c",
+        "xiosbase": "c",
+        "xlocale": "c",
+        "xlocbuf": "c",
+        "xlocinfo": "c",
+        "xlocmes": "c",
+        "xlocmon": "c",
+        "xlocnum": "c",
+        "xloctime": "c",
+        "xmemory": "c",
+        "xstddef": "c",
+        "xstring": "c",
+        "xtr1common": "c",
+        "xtree": "c",
+        "xutility": "c",
+        "sdl_vulkan.h": "c"
     }
 }
