--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -104,6 +104,8 @@
         "xtree": "c",
         "xutility": "c",
         "sdl_vulkan.h": "c",
-        "string_view": "c"
+        "string_view": "c",
+        "*.tcc": "c",
+        "memory_resource": "c"
     }
 }
