Fixed every single init and runtime error (but it's not working)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -106,6 +106,8 @@
         "sdl_vulkan.h": "c",
         "string_view": "c",
         "*.tcc": "c",
-        "memory_resource": "c"
+        "memory_resource": "c",
+        "vk_platform.h": "c",
+        "mktmath.h": "c"
     }
 }
