--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -123,6 +123,7 @@
         "_render.h": "c",
         "mktswapchaincreator.h": "c",
         "types.h": "c",
-        "mktvkshoebelt.h": "c"
+        "mktvkshoebelt.h": "c",
+        "utils.h": "c"
     }
 }
