--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -128,6 +128,8 @@
         "init.h": "c",
         "glfw3native.h": "c",
         "glfw3.h": "c",
-        "errorhandling.h": "c"
+        "errorhandling.h": "c",
+        "outerdefine.h": "c",
+        "externdefine.h": "c"
     }
 }
