--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-build.ps1 linguist-vendored=false
-build.sh linguist-vendored=false
+*.ps1 linguist-vendored=false
+*.sh linguist-vendored=false
+*.bat linguist-vendored=false
