--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.ps1 linguist-vendored=false
-*.sh linguist-vendored=false
-*.bat linguist-vendored=false
+*.ps1 -linguist-detectable
+*.sh -linguist-detectable
+*.bat -linguist-detectable
